[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bat-glimpse"
version = "0.1.0"
description = "Swift BAT GUANO imaging and mosaic pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy",
    "BatAnalysis",
    "emcee",
    "healpy",
    "ligo-gracedb",
    "ligo.skymap",
    "matplotlib",
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "swiftbat",
    "swifttools",
    "tqdm",
]

[project.scripts]
bat-glimpse = "batglimpse.bat_glimpse:main"
batglimpse = "batglimpse.bat_glimpse:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["batglimpse*"]
