[build-system]
requires = ["setuptools<81,>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bat-glimpse"
version = "0.1.6"
description = "Swift BAT GUANO imaging and mosaic pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "BatAnalysis==2.1.0",
    "astroquery>=0.4.10",
    "astropy>=4.3.1",
    "dpath>=2.1.4",
    "emcee",
    "healpy>=1.16.6",
    "histpy>=2.0.2",
    "joblib>=1.1.0",
    "ligo-gracedb",
    "ligo.skymap>=2.1.2",
    "matplotlib>=3.4.2",
    "mhealpy>=0.3.5",
    "numpy>=1.24.4",
    "pandas",
    "reproject>=0.13.1",
    "requests>=2.20",
    "scipy>=1.7.2",
    "setuptools<81",
    "swiftbat>=0.1.5",
    "swifttools==3.0.22",
    "tqdm",
    "astro-gdt-swift>=1.0.1",
    "astro-gdt-fermi",
    "scikit-learn"
]

[project.scripts]
bat-glimpse = "batglimpse.bat_glimpse:main"
batglimpse = "batglimpse.bat_glimpse:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["batglimpse*"]
